<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">青莲会宾楼菜谱</string>

    <string name="gridview_activity_load_order_failed">无法加载该记录!</string>

    <string name="launching_text">正在加载</string>
    <string name="launching_done">点击屏幕开始点菜</string>

    <string name="managing_button_to_order_menu">开始点菜</string>
    <string name="managing_button_to_ordesr_list">进入当日订单列表</string>
    <string name="managing_warning_validate_failed">此设备未经授权!</string>
    <string name="managing_warning_open_order_confirm_message1">是否要载入</string>
    <string name="managing_warning_open_order_confirm_message2">位于</string>
    <string name="managing_warning_open_order_confirm_message3">的订单?</string>
    <string name="managing_warning_open_order_confirm_time_form">kk点mm分</string>
    <string name="managing_button_quit">退出</string>

	<string name="order_prepare_title">菜单设置</string>
	<string name="order_prepare_label_location">位置:\u0020</string>

	<string name="ordered_list_refresh">刷新</string>
	<string name="ordered_list_export">导出</string>
	<string name="ordered_list_count">今日共计:\u0020</string>
	<string name="ordered_list_item_count">数量:\u0020</string>
	<string name="ordered_list_item_price">共计:\u0020</string>
	<string name="ordered_list_item_date_format">yyyy年MM月dd日 kk点mm分</string>
	<string name="ordered_list_date_format">今天是 yyyy年MM月dd日 E</string>

    <string name="preview_detail">详细内容</string>
    <string name="preview_quit">返回</string>
    <string name="preview_order">加入菜单</string>
    <string name="preview_price_prefix"></string>
    <string name="preview_price_rear">元</string>

    <string name="dishinfo_quit">返回</string>
    <string name="dishinfo_order">加入菜单</string>
    <string name="dishinfo_price_prefix"></string>
    <string name="dishinfo_price_rear">元</string>

    <string name="ordering_ok">确定</string>
    <string name="ordering_quit">取消</string>
    <string name="ordering_increase">+</string>
    <string name="ordering_decrease">-</string>
    <string name="ordering_clear">清零</string>
    <string name="ordering_count">数量:</string>
    <string name="ordering_multiply_char">x</string>
    <string name="ordering_adding_succeed">添加成功</string>
    <string name="ordering_adding_failed">添加失败</string>
    <string name="ordering_deleting_succeed">删除成功</string>
    <string name="ordering_deleting_falied">删除失败</string>
    <string name="ordering_count_cannot_be_zero">数量不能为0!\u0020\u0020或者您可以选择\'删除\'</string>

    <string name="ordered_myOrder_button_text">我的菜单</string>
    <string name="ordered_submit">提交菜单</string>
    <string name="ordered_goBack">返回</string>
    <string name="ordered_edit">编辑</string>
    <string name="ordered_remove">删除</string>
    <string name="ordered_time_format">点餐时间: yyyy年MM月dd日 E kk点mm分</string>
    <string name="ordered_listitem_label_id">菜单编号:\u0020</string>
    <string name="ordered_dialog_label_location">房间:\u0020</string>
    <string name="ordered_listitem_label_price">单价:\u0020</string>
    <string name="ordered_listitem_label_count">数量:\u0020x</string>
    <string name="ordered_dialog_label_count">总数:\u0020</string>
    <string name="ordered_dialog_label_price">总价:\u0020</string>
    <string name="ordered_dialog_price_tail">\u0020元</string>
    <string name="ordered_dialog_remove_message">确认删除</string>
    <string name="ordered_dialog_submit_message">您确定要提交?</string>
    <string name="ordered_dialog_submit_warning_empty">您的菜单是空的!</string>
    <string name="ordered_dialog_submit_succeed">提交成功!</string>
    <string name="ordered_dialog_submit_failed">提交失败!</string>

    <string name="confirm_dialog_title_confirming">请确认</string>
    <string name="confirm_dialog_title_warning">请注意</string>
    <string name="confirm_dialog_ok">确认</string>
    <string name="confirm_dialog_cancel">取消</string>
    <string name="confirm_dialog_exit">退出</string>

	<string name="warning_quiting">是否要退出程序?</string>
	<string name="warning_trial_title">试用版本提示</string>
	<string name="warning_trial_message">您当前使用的程序是测试版本\n购买正式版本请联系:\nemail: lacarte@yahoo.cn\n\n感谢您的支持!</string>
</resources>