<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/layout_main"
  android:orientation="vertical"
  android:gravity="center"
  android:background="#80000000"
  android:paddingTop="10px"
  android:paddingBottom="10px"
  android:paddingLeft="10px"
  android:paddingRight="10px"
  android:layout_width="400px"
  android:layout_height="200px">
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:paddingLeft="20px"
		android:orientation="horizontal"
		android:layout_weight="10"
		android:gravity="left">
		<TextView android:id="@+id/view_name"
			android:textStyle="bold"
			android:textSize="24px"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"/>
	</LinearLayout>
	<LinearLayout
		android:padding="10px"
		android:gravity="center"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="250"
		android:orientation="horizontal">
			<com.android.cb.view.CBDialogButton android:id="@+id/button_increase"
				android:text="@string/ordering_increase"
				android:textSize="24px"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="75px"/>

			<EditText android:id="@+id/edit_count"
			    android:focusable="false"
				android:text="1"
				android:textSize="24px"
				android:textStyle="bold"
				android:gravity="center"
				android:layout_centerInParent="true"
				android:layout_marginRight="15px"
				android:layout_marginLeft="15px"
				android:layout_width="100px"
				android:layout_height="wrap_content" />

			<com.android.cb.view.CBDialogButton android:id="@+id/button_decrease"
				android:text="@string/ordering_decrease"
				android:textSize="24px"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="75px"/>
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_weight="10"
		android:gravity="center">
			<com.android.cb.view.CBDialogButton android:id="@+id/button_ok"
				android:text="@string/ordering_ok"
				android:layout_height="wrap_content"
				android:layout_width="100px"/>

			<com.android.cb.view.CBDialogButton android:id="@+id/button_clear"
				android:text="@string/ordering_clear"
				android:layout_marginRight="15px"
				android:layout_marginLeft="15px"
				android:layout_height="wrap_content"
				android:layout_width="100px"/>

			<com.android.cb.view.CBDialogButton android:id="@+id/button_quit"
				android:text="@string/ordering_quit"
				android:layout_height="wrap_content"
				android:layout_width="100px"/>
		</LinearLayout>
</LinearLayout>