<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_main"
	android:orientation="vertical"
	android:gravity="center"
	android:paddingTop="20px"
	android:paddingBottom="10px"
	android:paddingLeft="20px"
	android:paddingRight="20px"
	android:background="#FFFFFFFF"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" >

		<!-- title line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:id="@+id/view_title"
				android:text="title"
				android:textSize="20px"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"/>
		</LinearLayout>

		<!-- list view -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_weight="250"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">

			<com.android.cb.view.CBOrderedItemsSummaryListView
			    android:id="@+id/cblistview_orderItemsList"
			    android:background="#60000000"
			    android:layout_height="fill_parent"
				android:layout_width="fill_parent"/>

		</LinearLayout>

		<!-- summation line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:gravity="right"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
				<TextView
					android:text="@string/ordered_list_count"
					android:textSize="24px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
				<TextView android:id="@+id/view_count"
					android:textSize="24px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
		</LinearLayout>

		<!-- buttons line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_gravity="bottom"
			android:gravity="right"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
				<com.android.cb.view.CBDialogButton android:id="@+id/button_refresh"
					android:text="@string/ordered_list_refresh"
					android:layout_marginRight="15px"
					android:layout_height="wrap_content"
					android:layout_width="100px"/>
				<com.android.cb.view.CBDialogButton android:id="@+id/button_quit"
					android:text="@string/ordered_goBack"
					android:layout_height="wrap_content"
					android:layout_width="100px"/>
		</LinearLayout>

</LinearLayout>