<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_main"
	android:orientation="vertical"
	android:gravity="center"
	android:paddingTop="20px"
	android:paddingBottom="10px"
	android:paddingLeft="20px"
	android:paddingRight="20px"
	android:background="#FFFFFFFF"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent" >

		<!-- date line -->
		<RelativeLayout
			android:layout_marginTop="10px"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">

			<LinearLayout android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_alignParentLeft="true"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
				<TextView
					android:text="@string/ordered_listitem_label_id"
					android:textSize="20px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
				<TextView android:id="@+id/view_id"
					android:textSize="20px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
			</LinearLayout>

			<LinearLayout android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_alignParentRight="true"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content">
				<TextView
					android:text="@string/ordered_dialog_label_location"
					android:textSize="20px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
				<TextView android:id="@+id/view_location"
					android:textSize="20px"
					android:textStyle="bold"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"/>
			</LinearLayout>

		</RelativeLayout>

		<!-- title line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:id="@+id/view_title"
				android:textSize="20px"
				android:textStyle="bold"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"/>
		</LinearLayout>

		<!-- list view -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_weight="250"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent">

			<com.android.cb.view.CBOrderedListView
			    android:id="@+id/cblistview_orderItemsList"
			    android:background="#60000000"
			    android:layout_height="fill_parent"
				android:layout_width="fill_parent"/>

		</LinearLayout>

		<!-- summation line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
				<RelativeLayout
					android:orientation="horizontal"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent">
					<TextView android:id="@+id/view_count"
						android:gravity="left"
						android:textSize="24px"
						android:textStyle="bold"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"/>

					<TextView android:id="@+id/view_price"
						android:gravity="right"
						android:textColor="#BB4444"
						android:textSize="24px"
						android:textStyle="bold"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"/>
				</RelativeLayout>
		</LinearLayout>

		<!-- buttons line -->
		<LinearLayout
			android:paddingTop="10px"
			android:layout_marginTop="10px"
			android:layout_gravity="bottom"
			android:gravity="right"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
				<com.android.cb.view.CBDialogButton android:id="@+id/button_submit"
					android:text="@string/ordered_submit"
					android:layout_marginRight="15px"
					android:layout_height="wrap_content"
					android:layout_width="100px"/>
				<com.android.cb.view.CBDialogButton android:id="@+id/button_quit"
					android:text="@string/ordered_goBack"
					android:layout_height="wrap_content"
					android:layout_width="100px"/>
		</LinearLayout>

</LinearLayout>